simple_calculator.html

--- a/simple_calculator.html
+++ b/simple_calculator.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="language" content="en">
     <meta name="description" content="This is a simple Calculator.">
     <meta name="author" content="Bruce Bainomugisha">
     <meta name="keywords" content="calculate, calculator, add, subtract, divide, multiply">
 
+    <link rel="icon" href="calc.png" type="image/png">
     <link rel="stylesheet" href="calculator.css">
 
 </head>
